--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,17 @@ readme = "README.md"
 packages = [{include = "analyse_audio"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 librosa = "^0.10.0.post2"
 matplotlib = "^3.7.1"
 jupyter = "^1.0.0"
-numpy = "^1.24.3"
+numpy = "^1.23"
+tensorflow = "^2.12.0"
+pandas = "^2.0.1"
+pydot = "^1.4.2"
+graphviz = "^0.20.1"
+seaborn = "^0.12.2"
+altair = "^5.0.0"
 
 
 [build-system]
