--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "analyse_audio"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 librosa = "^0.10.0.post2"
-matplotlib = "^3.7.1"
+matplotlib = "^3.7.0"
 jupyter = "^1.0.0"
 numpy = "^1.23"
 tensorflow = "^2.12.0"
@@ -18,6 +18,7 @@ pydot = "^1.4.2"
 graphviz = "^0.20.1"
 seaborn = "^0.12.2"
 altair = "^5.0.0"
+scipy = "^1.10.1"
 
 
 [build-system]
