--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ graphviz = "^0.20.1"
 seaborn = "^0.12.2"
 altair = "^5.0.0"
 scipy = "^1.10.1"
+tensorflow-decision-forests = "^1.3.0"
 
 
 [build-system]
