--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ seaborn = "^0.12.2"
 altair = "^5.0.0"
 scipy = "^1.10.1"
 tensorflow-decision-forests = "^1.3.0"
+sns = "^0.1"
 
 
 [build-system]
